--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,38 +1,69 @@
-<h1>Contacts</h1>
+<div class="col-md-6 offset-md-3">
 
-<ul>
-  {{#each contacts}}
-  <li>
-    <h3>{{firstname}} {{lastname}}</h3>
-    <p>{{email}}</p>
-    <p>{{phone}}</p>
-  <a href="/delete-contact/{{id}}">Delete</a>
-  <a href="/edit-contact/{{id}}">Edit</a>
-  </li>
-  {{/each}}
-</ul>
+  <div class="card bg-dark text-light">
+    
+    <div class="card-header">
+      <h1 class="h4 text-white">Contacts List</h1>
+    </div>
 
-<form action="{{#unless contact.id}}/new-contact{{else}}/update-contact/{{contact.id}}{{/unless}}" method="POST">
-  <div>
-    <label for="firstname">First Name:</label>
-    <input type="text" name="firstname" placeholder="First name" id="firstname" value="{{contact.firstname}}">  
+    <div class="card-body">
+      {{#if contacts}}
+        <ul class="list-group">
+        {{#each contacts}}
+          <li class="list-group-item flex justify-content-between align-items-center">
+            <h3>{{firstname}} {{lastname}}</h3>
+            <p>{{email}}</p>
+            <p>{{phone}}</p>
+            <a class="btn btn-danger" href="/delete-contact/{{id}}">Delete</a>
+            <a class="btn btn-secondary" href="/edit-contact/{{id}}">Edit</a>
+          </li>
+        {{/each}}
+        </ul>
+      {{else}}
+        <p>No contacts yet</p>
+      {{/if}}
+    </div>
+
+    <div class="card-footer">
+      <form action="{{#unless contact.id}}/new-contact{{else}}/update-contact/{{contact.id}}{{/unless}}" method="POST">
+        <div class="row">
+          
+          <div class="col">
+            <label for="firstname">First Name:</label>
+            <input type="text" name="firstname" placeholder="First name" id="firstname" value="{{contact.firstname}}" class="form-control mb-2">  
+          </div>
+
+          <div class="col">
+            <label for="lastname">Last Name:</label>
+            <input type="text" name="lastname" placeholder="Last name" id="lastname" value="{{contact.lastname}}" class="form-control mb-2">  
+          </div>
+
+        </div>
+
+        <div class="row">
+          
+          <div class="col">
+            <label for="email">Email:</label>
+            <input type="email" name="email" placeholder="Email" id="email" value="{{contact.email}}" class="form-control mb-2">
+          </div>
+
+          <div class="col"> 
+            <label for="phone">Phone:</label>
+            <input type="text" name="phone" placeholder="Phone" id="phone" value="{{contact.phone}}" class="form-control mb-2">
+          </div>
+        
+        </div>
+
+        {{#if contact.id}}
+          <button class="btn btn-primary btn-block">Update</button>
+          <a href="/" class="btn btn-secondary">Cancel</a>
+        {{else}}
+          <button class="btn btn-primary btn-block">Add</button>
+        {{/if}}
+      </form>
+
+    </div>
+  
   </div>
 
-  <div>
-    <label for="lastname">Last Name:</label>
-    <input type="text" name="lastname" placeholder="Last name" id="lastname" value="{{contact.lastname}}">  
-  </div>
-
-  <div>
-    <label for="email">Email:</label>
-    <input type="email" name="email" placeholder="Email" id="email" value="{{contact.email}}">
-  </div>
-
-  <div> 
-    <label for="phone">Phone:</label>
-    <input type="text" name="phone" placeholder="Phone" id="phone" value="{{contact.phone}}">
-  </div>
-
-  <button>Send</button>
-
-</form>
+</div>
