--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -7,14 +7,14 @@
     </div>
     
     {{#if contacts}}
-      <div class="card-body">  
+      <div class="card-body">
         <ul class="list-group">
         {{#each contacts}}
           <li class="list-group-item flex justify-content-between align-items-center text-dark">
             <h3>{{firstname}} {{lastname}}</h3>
             <p>{{email}}</p>
             <p>{{phone}}</p>
-            <a class="btn btn-danger" href="/delete-contact/{{id}}">Borrar</a>
+            <a class="btn btn-danger" href="/delete-contact/{{id}}" >Borrar</a>
             <a class="btn btn-secondary" href="/edit-contact/{{id}}">Editar</a>
           </li>
         {{/each}}
@@ -28,24 +28,59 @@
         <div class="row">
           <div class="col">
             <label for="firstname">Nombre:</label>
-            <input type="text" name="firstname" placeholder="Nombre" id="firstname" value="{{contact.firstname}}" class="form-control mb-2 text-dark" required>  
+            <input
+              type="text"
+              name="firstname"
+              placeholder="Nombre"
+              id="firstname"
+              value="{{contact.firstname}}"
+              class="form-control mb-2 text-dark"
+              maxlength="30"
+              required
+            >
           </div>
 
           <div class="col">
             <label for="lastname">Apellido:</label>
-            <input type="text" name="lastname" placeholder="Apellido" id="lastname" value="{{contact.lastname}}" class="form-control mb-2 text-dark" required>  
+            <input
+              type="text"
+              name="lastname"
+              placeholder="Apellido"
+              id="lastname"
+              value="{{contact.lastname}}"
+              class="form-control mb-2 text-dark"
+              maxlength="30"
+              required
+            >  
           </div>
         </div>
 
         <div class="row mb-3">
           <div class="col">
             <label for="email">Email:</label>
-            <input type="email" name="email" placeholder="Email" id="email" value="{{contact.email}}" class="form-control mb-2 text-dark" required>
+            <input
+              type="email"
+              name="email"
+              placeholder="Email"
+              id="email"
+              value="{{contact.email}}"
+              class="form-control mb-2 text-dark"
+              maxlength="40"
+              required
+            >
           </div>
 
-          <div class="col"> 
+          <div class="col">
             <label for="phone">Teléfono:</label>
-            <input type="text" name="phone" placeholder="Teléfono" id="phone" value="{{contact.phone}}" class="form-control mb-2 text-dark" required>
+            <input
+              type="number"
+              name="phone"
+              placeholder="Teléfono"
+              id="phone"
+              value="{{contact.phone}}"
+              class="form-control mb-2 text-dark"
+              required
+            >
           </div>
         </div>
 
@@ -60,5 +95,12 @@
     </div>
   
   </div>
+
+  <script>
+    // Validations on phone input
+    document.getElementById('phone').addEventListener('input', function () {
+      this.value = this.value.slice(0, 25).replace(/[^0-9]/g, '');
+    });
+  </script>
 
 </div>
